5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1834_1276.log
== TEST (2019-07-02 15:35:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input()))
v = shape(N)[1]
m = zeros(v, dtype=int)

for i in range(m):
	m[i] = sum(N[:, j])
for j in range(m):
	if m[j]==max(m):
		a = j+1
		print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:35:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input()))
v = shape(N)[1]
m = zeros(v, dtype=int)

for i in range(m):
	m[i] = sum(N[:, j])
for j in range(m):
	if m[j]==max(m):
		a = j+1
		print(a)
-- EXECUTION TIME:
1.13388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1276/main.py", line 8, in <module>
    for i in range(m):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:36:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input()))
v = shape(N)[1]
m = zeros(v, dtype=int)

for i in range(size(m)):
	m[i] = sum(N[:, j])
for j in range(size(m)):
	if m[j]==max(m):
		a = j+1
		print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:36:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input()))
v = shape(N)[1]
m = zeros(v, dtype=int)

for i in range(size(m)):
	m[i] = sum(N[:, j])
for j in range(size(m)):
	if m[j]==max(m):
		a = j+1
		print(a)
-- EXECUTION TIME:
0.904424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1276/main.py", line 9, in <module>
    m[i] = sum(N[:, j])
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:39:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input()))
v = shape(N)[1]
m = zeros(v, dtype=int)

for j in range(size(m)):
	m[j] = sum(N[:, j])
for j in range(size(m)):
	if m[j]==max(m):
		a = j+1
		print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:39:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input()))
v = shape(N)[1]
m = zeros(v, dtype=int)

for j in range(size(m)):
	m[j] = sum(N[:, j])
for j in range(size(m)):
	if m[j]==max(m):
		a = j+1
		print(a)
-- EXECUTION TIME:
0.866013
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:40:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input()))
v = shape(N)[1]
m = zeros(v, dtype=int)

for j in range(size(m)):
	m[j] = sum(N[:, j])
for j in range(size(m)):
	if m[j]==max(m):
		a = j+1
		print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:40:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input('Insira: ')))
v = shape(N)[1]
m = zeros(v, dtype=int)

for j in range(size(m)):
	m[j] = sum(N[:, j])
for j in range(size(m)):
	if m[j]==max(m):
		a = j+1
		print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:41:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = array(eval(input('Insira: ')))
v = shape(N)[1]
m = zeros(v, dtype=int)

for j in range(size(m)):
	m[j] = sum(N[:, j])
for j in range(size(m)):
	if m[j]==max(m):
		a = j+1
		print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
